# classes-to-calendar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .gitignore  app.py  backend.dockerfile  calocr.py  classes-to-calendar.ini  gcal.py  requirements.txt  wsgi.py
backend/app/: .coverage  pyproject.toml
backend/app/app/: main.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: calendar.py  upload.py
backend/app/app/calendar_utils/: fetch_date.py  html_parser.py  ics.py
backend/app/app/core/: config.py
backend/app/app/exceptions/: handlers.py  parser.py
backend/app/app/models/: __init__.py  umn_class.py
backend/app/app/schemas/: __init__.py  calendar.py  google_config.py  umn_class.py
backend/app/app/tests/api/api_v1/: test_calendar.py  test_upload.py
backend/app/app/tests/calendar_utils/: test_fetch_date.py  test_html_parser.py
backend/app/app/tests/resources/true-classes-output/: calendar.htm.json  fall2020calendar.html.json  no-class-day.html.json  partial-calendar.html.json  spring2021calendar.html.json
backend/app/app/tests/utils/: utils.py
backend/app/scripts/: format-imports.sh  format.sh  lint.sh  test-cov-html.sh  test-cov-xml.sh  test.sh
calendar-utils/: calocr.py  gcal.py
docs/: mkdocs.yml
extension/: .eslintrc  .prettierrc.js  background.js  content.js  jest.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
extension_legacy/: background.js  (+1 more)
(+143 files in other folders)
